--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/material": "^6.1.8",
+    "@reduxjs/toolkit": "^2.3.0",
     "next": "15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-toastify": "^9.1.3",
+    "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.6",
     "sass": "^1.81.0"
   },
   "devDependencies": {
